removed some styling and fix search bar alignment

--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,6 @@
     top: -45px;
     left: 0px;
     color: white;
-    background-color: black;
     width: 200px;
     height: 45px;
     padding: 10px;
@@ -70,16 +69,10 @@
     border-radius: 24px;
     transition: all 1s ease;
     z-index: 2;
-    label {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        font-size: 1rem;
-        color: white;
-        width: 75px;
-        height: min-content;
-        padding: 10px;
+    .city {
+      display: block;
+      height: 24px;
+      margin: 10px;
     }
     input {
         background-color: transparent;
@@ -88,6 +81,7 @@
         width: 450px;
         height: 40px;
         font-size: 1rem;
+        padding: 0;
     }
     input:focus {
         outline: none;
@@ -116,14 +110,15 @@
 .forecast-container {
   display: none;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(calc(-50% - .5px));
-  width: 250px;
-  height: 375px;
-  margin: 40px 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 300px;
+  height: 440px;
+  margin: auto;
   z-index: 5;
-  perspective: 500px;
+  perspective: 600px;
   transition: all 1.25s ease;
   opacity: 0;
 }
@@ -147,7 +142,6 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  // box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   color: white;
   padding: 20px;
   border-radius: 5px;
@@ -159,18 +153,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  //background-color: $darkblue;
   font-size: 1rem;
   h2 {
-    margin: 0px;
+    margin: 10px 0px 0px 0px;
+    font-size: 2rem;
   }
   i {
-    margin: 20px 0px 20px 0px;
-    font-size: 9rem;
+    margin: 30px 0px 30px 0px;
+    font-size: 9.5rem;
     color: $yellow;
   }
   .temp {
-    font-size: 3rem;
+    font-size: 3.5rem;
   }
   .desc {
     margin-top: 10px;
